<resources>
    <string name="app_name">YOUBER</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="restaurant">Nom restaurant</string>
    <string name="App">YOUBER™</string>
    <string name="CreateAnAccount">Créer un compte</string>
    <string name="Username">Nom d\'utilisateur</string>
    <string name="email">Adresse mail</string>
    <string name="ActivationCode">Code d\'activation</string>
    <string name="Receive">Recevoir</string>
    <string name="order">Commande</string>
    <string name="password">Mot de passe</string>
    <string name="passwordConfirm">Confirmer mot de passe</string>
    <string name="adress">Adresse</string>
    <string name="city">Ville</string>
    <string name="siret">Numéro SIRET</string>
    <string name="first_name">Prénom</string>
    <string name="name">Nom</string>
    <string name="phone">Téléphne</string>
    <string name="categories">Catégories</string>
    <string name="orders">Commandes</string>
    <string name="products">Produits</string>
    <string name="clients">Clients</string>
    <string name="add_client">Enregistrer un nouveau client</string>
    <string name="update_client">Modifier informations</string>
    <string name="update_category">Modifier la catégorie</string>
    <string name="add_product">Ajouter un produit:</string>
    <string name="add_category">Ajouter une catégorie:</string>
    <string name="search_product">Chercher produit...</string>
    <string name="search_client">Chercher client...</string>
    <string name="search_category">Chercher catégorie...</string>
    <string name="save">Enregistrer</string>
    <string name="total">TOTAL</string>
    <string name="OrderMode">Type de commande</string>
    <string name="paimentmeans">Mode de paiement</string>
    <string name="Delivery">Livraison</string>
    <string name="takeaway">A emporter</string>
    <string name="indoors">En salle</string>
    <string name="creditCard">Carte bancaire</string>
    <string name="cash">Espèces</string>
    <string name="other">Autres</string>
    <string name="EmptyCart">Le panier est vide</string>
    <string name="product_saved">Produit enregistré avec succès</string>
    <string name="client_saved">Client enregistré avec succès</string>
    <string name="category_saved">Catégorie enregistré avec succès</string>
    <string name="upload_image">Importer</string>
    <string name="add_to_cart">+ Ajouter</string>
    <string name="cart">PANIER</string>
    <string name="take_photo">Camera</string>
    <string name="price">Prix</string>
    <string name="quantity">Quantité</string>
    <string name="product_name">Nom du produit</string>
    <string name="category_name">Nom de catégorie</string>
    <string name="select_cat">Sélectionner catégorie</string>
    <string name="select_time">Heure de livraison</string>
    <string name="select_date">Date de livraison</string>
    <string name="OrderDate">Date de commande</string>
    <string name="order_type">Type de commande</string>
    <string name="waiting">En attente</string>
    <string name="inProgress">En cours</string>
    <string name="Delivered">Livrée</string>
    <string name="Unpaid"> Impayée</string>
    <string name="Paid"> Payée</string>
    <string name="countable">Stockable</string>
    <string name="noOrderText1">Aucune commande en attente</string>
    <string name="noOrderText2">Aucune commande en cours de préparation</string>
    <string name="noOrderText3">Aucune commande finies</string>
    <string name="currency">€</string>
    <string name="Checkout">Payer</string>
    <string name="print">Imprimer</string>
    <string name="Yes">Oui</string>
    <string name="Cancel">Annuler</string>
    <string name="AlreadyExisting">Ce produit est déjà dans le panier</string>
    <string name="OutofStock">Victime de son succès: stock insuffisant</string>
    <string name="erreur">Aucun élément trouvé</string>
    <string name="ProductDelete">Suppression de produit</string>
    <string name="CancelOrder">Annuler la commande</string>
    <string name="ClientDelete">Suppression de client</string>
    <string name="CatDelete">Suppression de catégorie</string>
    <string name="ProductDelete_message">Etes vous sur de vouloir supprimer ce produit </string>
    <string name="CancelOrder_message">Etes vous sur de vouloir annuler cette commande</string>
    <string name="ClientDelete_message">Etes vous sur de vouloir supprimer ce client ?</string>
    <string name="CatDelete_message">Etes vous sur de vouloir supprimer cette catégorie ?</string>
    <string name="fill_the_form">Veuillez remplir tous les champs</string>
    <string name="productupdate_success">Produit modifié avec succès</string>
    <string name="edit_product">Modifier le produit</string>
    <string name="countable_">"Veuillez préciser la quantité"</string>


</resources>