<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="25dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textColor="@color/Green_Logo"
        android:autoSizeTextType="uniform"
        android:gravity="bottom"
        android:paddingStart="10dp"
        android:text="@string/add_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.93"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/id_name_"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:hint="@string/product_name"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <EditText
                android:id="@+id/id_price_"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="20dp"
                android:hint="@string/select_cat">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.92"
                    android:layout_height="0dp"
                    android:autoSizeMaxTextSize="21dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical"
                    android:text="@string/countable"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:autoSizeMaxTextSize="15dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/countable_"
                    android:textColor="@color/colorPlaceholder"
                    android:textStyle="italic"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <CheckBox
                    android:id="@+id/getQantity"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintWidth_percent="0.2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/id_quantite"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="20dp"
                android:visibility="invisible"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:hint="@string/quantity"
                android:inputType="number"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="145dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/Green_Logo"
                    android:text="@string/upload_image"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_baseline_image_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.666"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Green_Logo"
                    android:text="@string/take_photo"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.666"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/button7"
                    app:layout_constraintVertical_bias="0.156" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/Green_Logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>