<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/imagelogo" />

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="23dp"
                android:textColor="@color/Green_Logo"
                android:fontFamily="sans-serif-black"
                android:text="@string/CreateAnAccount" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:hint="@string/Username"
                    app:endIconMode="clear_text">

                    <EditText
                        android:id="@+id/textname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textVisiblePassword"
                        android:paddingStart="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:hint="@string/email"
                    app:endIconMode="clear_text">

                    <EditText
                        android:id="@+id/textmail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle">

                    <EditText
                        android:id="@+id/textpass1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLength="20"
                        android:inputType="textPassword"
                        android:paddingStart="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:hint="@string/passwordConfirm"
                    app:endIconMode="password_toggle">

                    <EditText
                        android:id="@+id/textpass2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLength="20"
                        android:inputType="textPassword"
                        android:paddingStart="10dp" />
                </com.google.android.material.textfield.TextInputLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_weight="0.59"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:hint="@string/ActivationCode"
                        app:endIconMode="clear_text">

                        <EditText
                            android:id="@+id/code"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="textEmailAddress"
                            android:paddingStart="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnsend"
                        android:layout_width="0dp"
                        android:layout_weight="0.40"
                        android:layout_marginLeft="10dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/Green_Logo"
                        android:textColor="@color/white"
                        android:text="@string/Receive"  />

                </LinearLayout>



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#0023A630"
                    android:text="Créer un utilisateur"
                    android:textColor="@color/Green_Logo" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>