<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/orders"
        android:gravity="center"
        android:textColor="@color/Green_Logo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/waitingOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/waiting"
                android:textColor="@color/TextGrey"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ordersWaiting"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/waitingOrders"/>


            <ImageView
                android:id="@+id/noOrderImage1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/waiting"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/waitingOrders" />

            <TextView
                android:id="@+id/noOrderText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noOrderText1"
                android:textColor="@color/TextGrey"
                android:textSize="15sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/noOrderImage1"
                app:layout_constraintStart_toStartOf="@+id/noOrderImage1"
                app:layout_constraintTop_toBottomOf="@+id/noOrderImage1" />

            <TextView
                android:id="@+id/inProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/inProgress"
                android:textColor="@color/TextGrey"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ordersWaiting" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ordersInProgress"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/inProgress"/>

            <ImageView
                android:id="@+id/noOrderImage2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/inprogress"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inProgress" />

            <TextView
                android:id="@+id/noOrderText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noOrderText2"
                android:textColor="@color/TextGrey"
                android:textSize="15sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/noOrderImage2"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="@+id/noOrderImage2"
                app:layout_constraintTop_toBottomOf="@+id/noOrderImage2" />

            <TextView
                android:id="@+id/delivered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/Delivered"
                android:textColor="@color/TextGrey"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ordersInProgress" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ordersDelivered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/delivered"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/noOrderImage3"
                android:layout_width="50dp"
                android:layout_height="250dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/finished"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/delivered" />

            <TextView
                android:id="@+id/noOrderText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noOrderText3"
                android:textColor="@color/TextGrey"
                android:textSize="15sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/noOrderImage3"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="@+id/noOrderImage3"
                app:layout_constraintTop_toBottomOf="@+id/noOrderImage3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>